--- a/app/src/main/res/layout/item_quotes.xml
+++ b/app/src/main/res/layout/item_quotes.xml
@@ -1,48 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="quote"
-                  type="com.android.freelance.mvvm.data.db.entities.Quotes"/>
+
+        <variable
+            name="quote"
+            type="com.android.freelance.mvvm.data.db.entities.Quotes" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <RelativeLayout
-                android:padding="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="12dp">
+
+            <TextView
+                android:id="@+id/quote"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:fontFamily="Roboto"
+                android:text="@{`'`+quote.quote+`'`}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="#000"
+                tools:text="Success doesn’t just find you. You have to go out and get it." />
 
             <TextView
-                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                    android:id="@+id/quote"
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{`'`+quote.quote+`'`}"
-                    tools:text="Success doesn’t just find you. You have to go out and get it."/>
+                android:id="@+id/author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/quote"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:text="@{`-` + quote.author}"
+                android:fontFamily="Roboto"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="#000"
+                android:textStyle="italic"
+                tools:text="- Edward Brooklyn" />
 
             <TextView
-                    android:textColor="#000"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    tools:text="- Edward Brooklyn"
-                    android:text="@{`-` + quote.author}"
-                    android:layout_alignParentEnd="true"
-                    android:layout_below="@id/quote"
-                    android:id="@+id/author"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:textStyle="italic"/>
-
-            <TextView
-                    android:layout_marginTop="7dp"
-                    android:layout_below="@id/author"
-                    android:background="@color/colorPrimary"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"/>
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/author"
+                android:layout_marginTop="7dp"
+                android:background="@color/colorPrimary" />
 
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
