--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -35,7 +35,8 @@
                 android:text="@{viewmodel.user.name}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textColor="#000"
-                android:layout_marginTop="20sp"
+                android:layout_marginTop="10sp"
+                android:fontFamily="Roboto"
                 tools:text="Edward Brooklyn" />
 
             <TextView
@@ -44,8 +45,9 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@{viewmodel.user.email}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:fontFamily="Roboto"
                 android:textColor="#000"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="5sp"
                 tools:text="edwardbro41@gmail.com" />
 
         </LinearLayout>
